[package]
edition = "2021"
name = "profiles"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "profiles"

[dependencies]
serde = "1"
derive_more = "0"
hc_zome_profiles = {git = "https://github.com/holochain-open-dev/profiles", rev = "for-hdk-v0.0.130", package = "hc_zome_profiles"}

hdk = {version="0.0.130", features = ["encoding"]}

