[package]
edition = "2021"
name = "reactions"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "reactions"

[dependencies]
serde = "1"
derive_more = "0"

hdk = {version="0.0.130", features = ["encoding"]}
hc_utils = {git = "https://github.com/holochain/hc-utils", rev = "1da00e5677d50a837ebcf733e9b2d69064f814f0", package = "hc_utils"}

